--- a/package.json
+++ b/package.json
@@ -13,12 +13,7 @@
     "url": "https://github.com/mrvautin/adminmongo/issues"
   },
   "scripts": {
-    "start": "node app.js",
-    "test": "find ./tests -name '*.js' | xargs mocha -R spec -t 5000",
-    "packageOsx": "electron-packager ./ adminMongo --out=releases/ --platform=darwin --arch=x64 --prune --overwrite --ignore=releases/* --icon=public/logo.icns",
-    "packageWin32": "electron-packager ./ adminMongo --out=releases/ --platform=win32 --arch=ia32 --prune --overwrite --ignore=releases/* --icon=public/logo.ico",
-    "packageWin64": "electron-packager ./ adminMongo --out=releases/ --platform=win32 --arch=x64 --prune --overwrite --ignore=releases/* --icon=public/logo.ico",
-    "packageLinux": "electron-packager ./ adminMongo --out=releases/ --platform=linux --arch=ia32 --prune --overwrite --ignore=releases/* --icon=public/logo.ico"
+    "start": "nohup node app.js > start.log 2>&1 &"
   },
   "keywords": [
     "mongo",
@@ -77,14 +72,9 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "colors": "^1.1.2",
-    "electron-prebuilt": "^1.2.8",
     "eslint": "^3.2.0",
     "eslint-config-standard": "^5.3.5",
     "eslint-plugin-promise": "^2.0.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "jsdom": "^9.4.1",
-    "mocha": "^2.5.3",
-    "mocha-jsdom": "^1.1.0",
-    "supertest": "^1.2.0"
+    "eslint-plugin-standard": "^2.0.0"
   }
 }
