优化 https 配置文件

--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,7 @@
-{"connections":{}}
+{
+  "connections": {},
+  "credentials": {
+    "key": "../feed/ssl/div.key.unsec",
+    "cert": "../feed/ssl/div.crt"
+  }
+}
